Language string correction

--- a/com_flexicontent_v2.x/admin/language/en-GB.com_flexicontent.ini
+++ b/com_flexicontent_v2.x/admin/language/en-GB.com_flexicontent.ini
@@ -87,6 +87,22 @@ FLEXI_UNPUBLISHED="Unpublished"
 FLEXI_SELECT_AUTHOR="Select author"
 FLEXI_SELECT_CAT="Select category"
 FLEXI_SELECT_TYPE="Select type"
+FLEXI_ALTLINK_TEXTE="Alternative Read more text"
+FLEXI_COMPATIBILITY="Compatibility"
+FLEXI_IMAGES_COMP="Images (Joomla Built-in Views and modules)"
+FLEXI_IMAGES_COMP_DESC="..."
+FLEXI_IMAGES_COMP_CATE="Intro Images (Joomla category/featured/etc views)"
+FLEXI_IMAGES_COMP_CATE_DESC="..."
+FLEXI_IMAGES_COMP_FULLIMAGE="Full Images (Joomla article view)"
+FLEXI_IMAGES_COMP_FULLIMAGE_DESC="..."
+FLEXI_LINK_COMP="Links (Joomla built-in views and modules)"
+FLEXI_LINK_COMP_DESC="..."
+FLEXI_LINK_A="Link A"
+FLEXI_LINK_A_DESC="..."
+FLEXI_LINK_B="Link B"
+FLEXI_LINK_B_DESC="..."
+FLEXI_LINK_C="Link C"
+FLEXI_LINK_C_DESC="..."
 
 ; Items screen (added beta4)
 FLEXI_ADD_PREFIX="Add prefix to title"
@@ -644,6 +660,10 @@ FLEXI_CONTENT_LANGUAGE="Content Language"
 FLEXI_USE_GLOBAL="Use Global"
 FLEXI_NOT_SET="- not set -"
 FLEXI_PARAMCONTENTLANGUAGE="The Language in which this Item is written"
+FLEXI_DISPLAY_CUSTOM_FIELDS="Display custom fields <br/><small> do not add fields that will break feeds display</small>"
+FLEXI_DISPLAY_CUSTOM_FIELDS_DESC="..."
+FLEXI_DISPLAY_CUSTOM_FIELDS_LIST="Extra fields <br/> <small> comma separated list of field names</small>"
+FLEXI_DISPLAY_CUSTOM_FIELDS_LIST_DESC="Fields that requires extra CSS/JS will not work properly, fields that might be suitable are fields like e.g. date,text,select,etc. Enter a comma separated list of field names"
 
 ; Item parameters
 FLEXI_CHOOSE_SPECIFIC_ITEM_LAYOUT_DESC="Set a specific layout for this item"
@@ -2910,3 +2930,7 @@ FLEXI_FIELD_SHOW_NOACCESS="Show no access message"
 FLEXI_FIELD_SHOW_NOACCESS_DESC="When field is inaccessible a no access message will be shown. <br/><br/><b>NOTE:</b> IF this parameter is disabled, the field will be invisible to users with no access, without any message or warning that it exists"
 FLEXI_FIELD_NOACCESS_MSG="No access message"
 FLEXI_FIELD_NOACCESS_MSG_DESC="Leave this blank to use system's default no access message, or enter a custom message for this field"
+
+FLEXI_OUTSIDE="Outside filter"
+FLEXI_INSIDE="Inside filter"
+FLEXI_YES_INGORED="yes, (this is currently ignored)"
