+ Added redirection back to form when JForm validation fails, with proper messages and with data reloading of all JForm fields, TODO custom fields. Also fixed (/changed) ignoring if type's default category is user allowed allowed categories. Minor, added message for no allowed categories instead of showing item form with empty category selector

--- a/com_flexicontent_v2.x/admin/language/en-GB.com_flexicontent.ini
+++ b/com_flexicontent_v2.x/admin/language/en-GB.com_flexicontent.ini
@@ -2934,3 +2934,5 @@ FLEXI_FIELD_NOACCESS_MSG_DESC="Leave this blank to use system's default no acces
 FLEXI_OUTSIDE="Outside filter"
 FLEXI_INSIDE="Inside filter"
 FLEXI_YES_INGORED="yes, (this is currently ignored)"
+
+FLEXI_CANNOT_SUBMIT_IN_TYPE_ALLOWED_CATS="Cannot submit content in any of the categories allowed for the chosen content type"
