--- a/com_flexicontent_v2.x/admin/language/en-GB.com_flexicontent.ini
+++ b/com_flexicontent_v2.x/admin/language/en-GB.com_flexicontent.ini
@@ -2936,3 +2936,16 @@ FLEXI_INSIDE="Inside filter"
 FLEXI_YES_INGORED="yes, (this is currently ignored)"
 
 FLEXI_CANNOT_SUBMIT_IN_TYPE_ALLOWED_CATS="Cannot submit content in any of the categories allowed for the chosen content type"
+
+FLEXI_PARAMS_CAT="<sup>[1]</sup> Params not saved yet, default values will be used."
+FLEXI_YES_INGORED="yes, (this is currently ignored)"
+
+;User view
+FLEXI_NAME="Name"
+FLEXI_USER_NAME="Username"
+FLEXI_USER_LOGIN="Logged in"
+FLEXI_ENABLED="Enabled"
+FLEXI_USER_EMAIL="E-Mail"
+FLEXI_REGISTRED_DATE="Registered"
+FLEXI_USER_LAST_VISIT="Last Visit"
+FLEXI_ID="ID"
