--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2951,4 +2951,8 @@ FLEXI_ID="ID"
 FLEXI_CUSTOM_MODULE_PER_ITEM="Customize module parameters per item (not for position mode)"
 FLEXI_CUSTOM_MODULE_PER_ITEM_DESC="You can - try - to customize some module parameters by allowing user to enter values for them in item form. <br/><br/> <b>NOTE</b> You need to examine XML file of target module to find parameter names  &lt;br/&gt;&lt;br/&gt; <b>Example</b>  <br/> param_label1!!param_name1 %% param_label2!!param_name2 %% param_label3!!param_name3 "
 
+;Generic term
 FLEXI_HTML="HTML"
+FLEXI_BASCI_CONFIGURATION="Basic Configuration"
+FLEXI_TITLE="Title"
+FLEXI_IMAGE="Image"
