--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2898,7 +2898,7 @@ FLEXI_ALL="All"
 FLEXI_ANY="Any"
 FLEXI_NONE="None"
 FLEXI_ADD="Add"
-FLEXI_Remove="Remove"
+FLEXI_REMOVE="Remove"
 FLEXI_TOP="Top"
 FLEXI_BOTTOM="Bottom"
 
