# Fixed wrong and misleading checkin message in backend listings, shown to users without global checkin privilege, about record rows currently checked out by themselves, also now checkin icon is displayed to them

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2891,7 +2891,7 @@ FLEXI_PARENT_CAT_MULTI_LEVEL="PARENT CATEGORIES (multi-level)"
 FLEXI_CATS_INHERIT_PARAMS_DEBUG="Debug parameter heritage"
 FLEXI_CATS_INHERIT_PARAMS_DEBUG_DESC="Will display parameter heritage info in frontend"
 
-; other common
+; other common, generic terms
 FLEXI_BEFORE="Before"
 FLEXI_AFTER="After"
 FLEXI_ALL="All"
@@ -2901,6 +2901,9 @@ FLEXI_ADD="Add"
 FLEXI_REMOVE="Remove"
 FLEXI_TOP="Top"
 FLEXI_BOTTOM="Bottom"
+FLEXI_HTML="HTML"
+FLEXI_TITLE="Title"
+FLEXI_IMAGE="Image"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
@@ -2950,8 +2953,3 @@ FLEXI_ID="ID"
 
 FLEXI_CUSTOM_MODULE_PER_ITEM="Customize module parameters per item (not for position mode)"
 FLEXI_CUSTOM_MODULE_PER_ITEM_DESC="You can - try - to customize some module parameters by allowing user to enter values for them in item form. <br/><br/> <b>NOTE</b> You need to examine XML file of target module to find parameter names  &lt;br/&gt;&lt;br/&gt; <b>Example</b>  <br/> param_label1!!param_name1 %% param_label2!!param_name2 %% param_label3!!param_name3 "
-
-;Generic term
-FLEXI_HTML="HTML"
-FLEXI_TITLE="Title"
-FLEXI_IMAGE="Image"
