^ Changed blog template CSS to make the number of columns responsive to the browser window width

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -833,6 +833,7 @@ FLEXI_CUT_INTRO="Introtext max length"
 FLEXI_IMAGE_HEIGHT="Image height"
 FLEXI_IMAGE_WIDTH="Image width"
 FLEXI_INTRO_COLS="Intro Columns"
+FLEXI_INTRO_COLS_MAX="Intro Columns (up to)"
 FLEXI_INTRO_ITEMS_DESC="Parameters of the intro items"
 FLEXI_INTRO_ITEMS="Intro items"
 FLEXI_ITEM_DEPTH_DESC="Choose the item depth in your menu structure. This parameter avoids the duplicate pathway elements. You will un derstand better when you will have the case ;-)"
@@ -926,6 +927,7 @@ FLEXI_SMALL="Small"
 FLEXI_MEDIUM="Medium"
 FLEXI_LARGE="Large"
 FLEXI_INTRO_COLS_DESC="Number of columns for the intro items"
+FLEXI_INTRO_COLS_MAX_DESC="Number of columns for the intro items. NOTE: this is the max value and actually number of columns displayed will depend to width of browser window"
 FLEXI_NUM_LEADING_DESC="Number of leading items (full width)"
 
 ; Directory menu
