+ Blog template can have leading items into columns too, added support for placing both leading and intro items as masonry tiles

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -833,7 +833,12 @@ FLEXI_CUT_INTRO="Introtext max length"
 FLEXI_IMAGE_HEIGHT="Image height"
 FLEXI_IMAGE_WIDTH="Image width"
 FLEXI_INTRO_COLS="Intro Columns"
-FLEXI_INTRO_COLS_MAX="Intro Columns (up to)"
+
+FLEXI_MAX_ITEM_COLS_RESPONSIVE="Max item columns (responsive)"
+FLEXI_ITEMS_PLACEMENT="Items placement"
+FLEXI_AS_MASONRY_TILES="As masonry tiles"
+FLEXI_LEADING_NUM="# Leading"
+
 FLEXI_INTRO_ITEMS_DESC="Parameters of the intro items"
 FLEXI_INTRO_ITEMS="Intro items"
 FLEXI_ITEM_DEPTH_DESC="Choose the item depth in your menu structure. This parameter avoids the duplicate pathway elements. You will un derstand better when you will have the case ;-)"
@@ -926,9 +931,14 @@ FLEXI_USE_PARAMS="Use parameters"
 FLEXI_SMALL="Small"
 FLEXI_MEDIUM="Medium"
 FLEXI_LARGE="Large"
+
 FLEXI_INTRO_COLS_DESC="Number of columns for the intro items"
-FLEXI_INTRO_COLS_MAX_DESC="Number of columns for the intro items. NOTE: this is the max value and actually number of columns displayed will depend to width of browser window"
 FLEXI_NUM_LEADING_DESC="Number of leading items (full width)"
+
+FLEXI_MAX_ITEM_COLS_RESPONSIVE_DESC="Number of columns for the items. NOTE: this is the max value and actually number of columns displayed will depend to width of browser window"
+FLEXI_ITEMS_PLACEMENT_DESC="Placement method for tems, e.g. select as masonry tiles, to place them, so that no empty space gaps are between them, resembling the placement of masonry tiles"
+FLEXI_LEADING_NUM_DESC="Leading items are placed before 'intro' items and have different configuration, usually showing more options and usually taking more space e.g. (full width)"
+
 
 ; Directory menu
 FLEXI_3_COLS="3 columns"
