+ Added better handling of print frontend task, with new parameter, either automatically show browser print dialog or display a print button to open the browser print dialog, also filtering forms are now hidden in print view, for category, tags, favourites, search views

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -605,6 +605,8 @@ FLEXI_PDF_ICON_DESC="Enable PDF functionality"
 FLEXI_PDF_ICON="PDF Icon"
 FLEXI_PRINT_ICON_DESC="Enable Print screen"
 FLEXI_PRINT_ICON="Print Icon"
+FLEXI_PRINT_METHOD="Print Method"
+FLEXI_PRINT_METHOD_DESC="Select to automatically open browser print dialog, or display a print button inside the page"
 FLEXI_READ_MORE_LINK="Read more... Link"
 FLEXI_RESTRICT_UPLOADS_DESC="Restrict uploads for lower than Manager users to just images if Fileinfo or MIME Magic is not installed."
 FLEXI_RESTRICT_UPLOADS="Restrict Uploads"
@@ -2916,6 +2918,7 @@ FLEXI_BOTTOM="Bottom"
 FLEXI_HTML="HTML"
 FLEXI_TITLE="Title"
 FLEXI_IMAGE="Image"
+FLEXI_BUTTON="Button"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
