+ Added image and/or label for filters of fields that have an image (checkboximage, radioimage fields), also fixed incorrect usage of basic search filters for creating the display of filters for fields (date,core,coreprops), e.g. parameters show value count, label

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2501,6 +2501,9 @@ FLEXI_DISPLAY_AS_TAG_LIKE="Tag-like selector (multi)"
 FLEXI_DISPLAY_AS_RADIO="Radio options"
 FLEXI_DISPLAY_AS_CHECKBOXES="Checkboxes (multi)"
 
+FLEXI_FILTER_VALS_DISPLAY="Filter values"
+FLEXI_FILTER_VALS_DISPLAY_DESC="Default is to show label only (text)"
+
 FLEXI_FACETED_BEHAVIOR_ACTIVE_FILTERS="'Active filters' Faceted Filter (set above)"
 FLEXI_FILTER_FACETED_FILTER_USING="Faceted Filter <br/><small>values according to ...</small>"
 FLEXI_FILTER_FACETED_FILTER_USING_DESC="Calculate the displayed filter values according to either <b>page configuration</b> or according to <b>active Filters</b>. <br/><br/> <u>OPTION</u>: &nbsp; <b>Disable</b> this to show all values and achieve high performance in large sites (more than 10,000 items per category or more than 10,000 items in search index). <br/><br/>  <u>OPTION</u>: &nbsp; <b>Page configuration</b> is cacheable and will have a small performance impact on first page load (for large sites) <br/> -- this option displays filter values by considering only category configuration and/or (category/search view) menu item configuration. <br/><br/> <u>OPTION</u>: &nbsp; <b>Active filters</b> is not cacheable and it will have a moderate performance impact on every page load (large sites) when (and if) user activates some filters. <br/>-- this option displays filter values by considering everything: alpha-index, text search, field filters, etc, thus offering <b>best user experience</b>."
