--- a/site/language/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB.com_flexicontent.ini
@@ -323,7 +323,7 @@ FLEXI_ARCHIVE_THIS_ITEM="Set state as : archived"
 FLEXI_TRASH_THIS_ITEM="Set state as : trashed"
 
 FLEXI_CLICK_TO_CHANGE_STATE="<small>- CLICK to change state of the item</small>"
-FLEXI_STATE_CHANGER_DISABLED="<small>- Popup State Changer Disabled (e.g too many items listed per page)</small>"
+FLEXI_STATE_CHANGER_DISABLED="<small>- Popup State Changer Disabled (Set display to 30 items or less)</small>"
 
 FLEXI_START="Start"
 FLEXI_FINISH="Finish"
