--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2420,6 +2420,22 @@ FLEXI_NO_USE_SEPARATOR="No, use separator"
 FLEXI_YES_BUT_FILTER_BELOW_LABEL="Yes, but filter below label"
 FLEXI_TYPE_SEARCH_LABEL="Show Label"
 FLEXI_TYPE_SEARCH_LABEL_DESC="You may want to hide label or display label inside the content types search"
+FLEXI_BUTTON_CLASS_GO="Go class"
+FLEXI_BUTTON_CLASS_GO_DESC="Class for Go button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_RESET="Reset class"
+FLEXI_BUTTON_CLASS_RESET_DESC="Class for Go button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_FCBUTTON="Flexicontent class"
+FLEXI_BUTTON_CLASS_PRIMARY="Bootstrap primary (blue)"
+FLEXI_BUTTON_CLASS_SUCCESS="Bootstrap success (green)"
+FLEXI_BUTTON_CLASS_INFO="Bootstrap info (light blue)"
+FLEXI_BUTTON_CLASS_WARNING="Bootstrap warning (orange)"
+FLEXI_BUTTON_CLASS_DANGER="Bootstrap danger (red)"
+FLEXI_BUTTON_CLASS_INVERSE="Bootstrap inverse (black)"
+FLEXI_BUTTON_CLASS_GO_CUSTOM="Custom class"
+FLEXI_BUTTON_CLASS_GO_CUSTOM_DESC="Add custom class for go button, like uk-button uk-button-large for a warp 7 template"
+FLEXI_BUTTON_CLASS_RESET_CUSTOM="Custom class"
+FLEXI_BUTTON_CLASS_RESET_CUSTOM_DESC="Add custom class for reset button, like uk-button uk-button-large for a warp 7 template"
+FLEXI_USE_CUSTOM_BELOW="Use custom class bellow"
 
 ; enhancements of search/filtering : Params Headers
 FLEXI_TEXT_SEARCH="Text Search"
