+adding css class option for advanced module

--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -56,6 +56,10 @@ FLEXI_MOD_ADV_SEARCH_SHOW_LINK="Show link"
 FLEXI_MOD_ADV_SEARCH_SHOW_LINK_DESC="Enable this to display a direct link to the (FLEXIcontent) advanced search view"
 FLEXI_MOD_ADV_SEARCH_LINKED_TEXT="Linked Text"
 FLEXI_MOD_ADV_SEARCH_LINKED_TEXT_DESC="The text that will be linked to (FLEXIcontent) advanced search view"
+FLEXI_BUTTON_CLASS_ADVANCED="Advanced button class"
+FLEXI_BUTTON_CLASS_ADVANCED_DESC="Class for Adnanced button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_ADVANCED_CUSTOM="Custom class"
+FLEXI_BUTTON_CLASS_ADVANCED_CUSTOM_DESC="Add custom class for advanced button, like uk-button uk-button-large for a warp 7 template"
 
 FLEXI_USE_GLOBAL="Use global"
 FLEXI_NO_CACHING="No caching"
