Langage strings for "Lucky" feature

--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -50,6 +50,28 @@ FLEXI_MOD_BUTTON_TEXT_DESC="When the Go button is text <br/><br/><b>NOTE</b>: Th
 FLEXI_MOD_BUTTON_IMAGE_SRC="Image path "
 FLEXI_MOD_BUTTON_IMAGE_SRC_DESC="When the Go button is an image <br/><br/><b>NOTE</b>: this path is relative to site's root</small>"
 
+FLEXI_MOD_DIRECT_BUTTON="Direct Button (Go to the first result)"
+
+FLEXI_MOD_SHOW_DIRECT_BUTTON="Show"
+FLEXI_MOD_SHOW_DIRECT_BUTTON_DESC="Displays a direct / lucky button"
+
+FLEXI_MOD_DIRECT_POSITION="Position"
+FLEXI_MOD_DIRECT_POSITION_DESC="Position of the button relative to the search box"
+FLEXI_DIRECT_RIGHT="Right"
+FLEXI_DIRECT_LEFT="Left"
+FLEXI_DIRECT_TOP="Top"
+FLEXI_DIRECT_BOTTOM="Bottom"
+
+FLEXI_MOD_DIRECT_AS="Button as"
+FLEXI_MOD_DIRECT_AS_DESC="Display button as either text or a image. <br/><br/> <b>NOTE</b>: set an image path relative to Joomla folder"
+FLEXI_MOD_DIRECT_AS_TEXT="Text"
+FLEXI_MOD_DIRECT_AS_IMAGE="Image"
+
+FLEXI_MOD_DIRECT_TEXT="Text"
+FLEXI_MOD_DIRECT_TEXT_DESC="When the Direct button is text <br/><br/><b>NOTE</b>: This can be a language string"
+FLEXI_MOD_DIRECT_IMAGE_SRC="Image path "
+FLEXI_MOD_DIRECT_IMAGE_SRC_DESC="When the Direct button is an image <br/><br/><b>NOTE</b>: this path is relative to site's root</small>"
+
 FLEXI_MOD_ADV_SEARCH="Advanced search view link"
 FLEXI_MOD_ADV_SEARCH_DESC="Link to advanced search view"
 FLEXI_MOD_ADV_SEARCH_SHOW_LINK="Show link"
