--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2958,7 +2958,9 @@ FLEXI_FCORDER_USE_CATEGORY_FILTER="To order specific category, activate the <b>C
 FLEXI_NON_ORDERABLE_CUSTOM_FIELDS="Fields that cannot be ordered"
 FLEXI_NON_ORDERABLE_CUSTOM_FIELDS_DESC="Some fields cannot be ordered or are meaningless to order, e.g. toolbar, please add their type name here, separated with commas. Fields added here will not appear in custom field ordering selectors"
 
-; Language filtering of field values
+; Language filtering of field values / labels
+FLEXI_LANG_FILTER_LABELS="Language filter labels"
+FLEXI_LANG_FILTER_LABELS_DESC="Apply language filter JText::_() on the labels, the labels must be language strings, either added in a language file, or added by Joomla language overrides manager"
 FLEXI_LANG_FILTER_VALUES="Language filter values"
 FLEXI_LANG_FILTER_VALUES_DESC="Apply language filter JText::_() on the values, the values must be language strings, either added in a language file, or added by Joomla language overrides manager"
 
