+ Added parameter for item form to select showing label or image or both for radioimage, checkboximage fields, also fixed filter creation not cloning labels of indexable (selection-like) fields, thus undesirably modifying the labels of these fields in some cases, e.g. when item form displays field filters, increased the width elements parameter for indexable (selection-like) field

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2517,8 +2517,8 @@ FLEXI_DISPLAY_AS_TAG_LIKE="Tag-like selector (multi)"
 FLEXI_DISPLAY_AS_RADIO="Radio options"
 FLEXI_DISPLAY_AS_CHECKBOXES="Checkboxes (multi)"
 
-FLEXI_FILTER_VALS_DISPLAY="Filter values"
-FLEXI_FILTER_VALS_DISPLAY_DESC="Default is to show label only (text)"
+FLEXI_FIELD_VALS_DISPLAY="Values display"
+FLEXI_FIELD_VALS_DISPLAY_DESC="Select to show label, image or both"
 
 FLEXI_FACETED_BEHAVIOR_ACTIVE_FILTERS="'Active filters' Faceted Filter (set above)"
 FLEXI_FILTER_FACETED_FILTER_USING="Faceted Filter <br/><small>values according to ...</small>"
@@ -2556,7 +2556,7 @@ FLEXI_PREVIEW_LATEST_SAVED_VERSION="Preview Latest Saved"
 FLEXI_EDIT_ASSOC_TRANSLATION="Edit associated translation"
 FLEXI_ASSOC_TRANSLATIONS="Associated translations"
 
-; some error mesages
+; some error messages
 FLEXI_ALERTNOTAUTH_CREATE="You are not authorized to create content"
 FLEXI_ALERTNOTAUTH_CREATE_MORE="You are not authorized to create more content, you max number of content (%s) has been reached"
 FLEXI_ALERT_CHECKOUT_FAILED="Error locking (checking-out) the record"
