--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -50,12 +50,53 @@ FLEXI_MOD_BUTTON_TEXT_DESC="When the Go button is text <br/><br/><b>NOTE</b>: Th
 FLEXI_MOD_BUTTON_IMAGE_SRC="Image path "
 FLEXI_MOD_BUTTON_IMAGE_SRC_DESC="When the Go button is an image <br/><br/><b>NOTE</b>: this path is relative to site's root</small>"
 
+FLEXI_MOD_DIRECT_BUTTON="Direct Button (Go to the first result)"
+
+FLEXI_MOD_SHOW_DIRECT_BUTTON="Show"
+FLEXI_MOD_SHOW_DIRECT_BUTTON_DESC="Displays a direct / lucky button"
+
+FLEXI_MOD_DIRECT_POSITION="Position"
+FLEXI_MOD_DIRECT_POSITION_DESC="Position of the button relative to the search box"
+FLEXI_DIRECT_RIGHT="Right"
+FLEXI_DIRECT_LEFT="Left"
+FLEXI_DIRECT_TOP="Top"
+FLEXI_DIRECT_BOTTOM="Bottom"
+
+FLEXI_MOD_DIRECT_AS="Button as"
+FLEXI_MOD_DIRECT_AS_DESC="Display button as either text or a image. <br/><br/> <b>NOTE</b>: set an image path relative to Joomla folder"
+FLEXI_MOD_DIRECT_AS_TEXT="Text"
+FLEXI_MOD_DIRECT_AS_IMAGE="Image"
+
+FLEXI_MOD_DIRECT_TEXT="Text"
+FLEXI_MOD_DIRECT_TEXT_DESC="When the Direct button is text <br/><br/><b>NOTE</b>: This can be a language string"
+FLEXI_MOD_DIRECT_IMAGE_SRC="Image path "
+FLEXI_MOD_DIRECT_IMAGE_SRC_DESC="When the Direct button is an image <br/><br/><b>NOTE</b>: this path is relative to site's root</small>"
+
+FLEXI_ADV_MOD_DIRECT="Lucky"
+
 FLEXI_MOD_ADV_SEARCH="Advanced search view link"
 FLEXI_MOD_ADV_SEARCH_DESC="Link to advanced search view"
 FLEXI_MOD_ADV_SEARCH_SHOW_LINK="Show link"
 FLEXI_MOD_ADV_SEARCH_SHOW_LINK_DESC="Enable this to display a direct link to the (FLEXIcontent) advanced search view"
 FLEXI_MOD_ADV_SEARCH_LINKED_TEXT="Linked Text"
 FLEXI_MOD_ADV_SEARCH_LINKED_TEXT_DESC="The text that will be linked to (FLEXIcontent) advanced search view"
+
+FLEXI_BUTTON_CLASS_RESET="Reset class"
+FLEXI_BUTTON_CLASS_RESET_DESC="Class for Go button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_FCBUTTON="Flexicontent class"
+FLEXI_BUTTON_CLASS_PRIMARY="Bootstrap primary (blue)"
+FLEXI_BUTTON_CLASS_SUCCESS="Bootstrap success (green)"
+FLEXI_BUTTON_CLASS_INFO="Bootstrap info (light blue)"
+FLEXI_BUTTON_CLASS_WARNING="Bootstrap warning (orange)"
+FLEXI_BUTTON_CLASS_DANGER="Bootstrap danger (red)"
+FLEXI_BUTTON_CLASS_INVERSE="Bootstrap inverse (black)"
+
+FLEXI_USE_CUSTOM_BELOW="Use custom class bellow"
+
+FLEXI_BUTTON_CLASS="CSS class"
+FLEXI_BUTTON_CLASS_DESC="CSS class for this button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_CUSTOM="Custom class"
+FLEXI_BUTTON_CLASS_CUSTOM_DESC="Add custom class for this button, like uk-button uk-button-large for a warp 7 template"
 
 FLEXI_USE_GLOBAL="Use global"
 FLEXI_NO_CACHING="No caching"
