+ Added selection for forcing specific submit menu item for the add button of category/content lists. This way we can easily limit specific categories to specific content type. (to work this the "Create Items" privilege should be denied so that users can submit only via specific menu items)

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2294,6 +2294,9 @@ FLEXI_MENU_ITEM_SELECTABLE_VIA_DIRECT_CLICK_ONLY="<small>PLEASE NOTE: if you ena
 ; Add new content for content lists (e.g. category view)
 FLEXI_SHOW_ADD_TO_LIST_BUTTON="Add button<br/><small>to Category / to List</small>"
 FLEXI_SHOW_ADD_TO_LIST_BUTTON_DESC="Enables display of Add to Category(/to List) Button for all categories/lists that the currently logged user can add"
+FLEXI_ADD_TO_LIST_MENU_ITEM="Add button menu item <br><small>(uses its configuration)"
+FLEXI_ADD_TO_LIST_MENU_ITEM_DESC="You may want to force a specific submit menu item, so that custom configuration is used, e.g. limit to specific content type(s). <br/><br/><b>NOTE 1</b>: In case you want to allow specific content type for specific categories, you should deny 'create items' ACL privilege to the users, thus they will be able to submit only via content TYPE OVERRIDE in the submit menu item. <br/><br/><b>NOTE 2</b>:  Nevertheless you may still want to configure ACL for categories (create/edit/etc)"
+
 
 ; Some common parameter for fields that use textarea/HTML Editor for editing
 FLEXI_SIMPLE_TEXTAREA="Simple Textarea"
