# Updated all frontend tooltips to be J3.x bootstrap tooltips, except for item form which is unfinished in regards to this, also added usage of 'add_tooltips' component parameter in voting and favs helper functions, also for backend, moved the loading of tooltip JS in component entry point like it is in frontend

--- a/site/language/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB.com_flexicontent.ini
@@ -29,7 +29,7 @@ FLEXI_LOADING="loading"
 FLEXI_PENDING="Pending"
 FLEXI_POOR="Poor"
 FLEXI_REGULAR="Regular"
-FLEXI_REMOVE_FAVOURITE="Remove this item from your favourites"
+FLEXI_REMOVE_FAVOURITE="Remove from your favourites"
 FLEXI_THANK_YOU_FOR_VOTING="Thank you for voting"
 FLEXI_TO_WRITE="Draft"
 FLEXI_UNPUBLISHED="Unpublished"
