--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -306,8 +306,7 @@ FLEXI_CATEGORY_READ_MORE="More category items"
 FLEXI_MODULE_READ_MORE="Read more content"
 
 ;### Part 5a
-FLEXI_GENERAL_MOD_DISPLAY_PARAMS="Display general module parameters (used by all Layouts)"
-FLEXI_MOD_MORE_PARAMS="Read More parameters"
+FLEXI_MOD_FOOTER_MORE="Footer Read More"
 FLEXI_MOD_DISPLAY_MORE="Display Read More"
 FLEXI_MOD_DISPLAY_MORE_DESC="Displays a link at the bottom of the module that links to the specified URL."
 FLEXI_MOD_MORE_TITLE="More Title"
@@ -329,7 +328,7 @@ FLEXI_CUSTOM5="Parameter 5"
 FLEXI_CUSTOM_DESC="These custom parameters may be useful in some specific templates"
 
 ;### Part 6
-FLEXI_MOD_ADVANCED="Advanced Parameters (styling & caching etc)"
+FLEXI_MOD_ADVANCED_CACHE_STYLING="Cache / Styling"
 
 FLEXI_MODULE_STYLING="Module Styling"
 FLEXI_MODULE_CLASS_SUFFIX="Module Class Suffix"
@@ -422,7 +421,7 @@ FLEXI_COMMENTS="Comments"
 FLEXI_COMMENTS_L="comments"
 FLEXI_YES_AFTER_COUNTER="Yes, after counter"
 
-FLEXI_MODULE_DISPLAYING_RULES="Hide/Show Module: <small>Specify when module will create (and show) its contents</small>"
+FLEXI_MODULE_DISPLAYING_RULES="Hide/Show Module"
 FLEXI_MODULE_DISPLAYING_RULES_DESC="These rules specify when module contents will be created (thus shown) or not created (thus hidden)."
 FLEXI_COMBINE_SHOW_RULES="Combine Rules"
 FLEXI_COMBINE_SHOW_RULES_DESC="Either require any or both VIEWS rules and PHP expression rule, in order to show the module"
@@ -447,22 +446,21 @@ FLEXI_PHP_RULE_CODE="PHP rule code"
 FLEXI_PHP_RULE_CODE_DESC="The given PHP code is execute and last statement must return  a boolean value (via 'return' statement) which will used to decide to show or not the module"
 
 ;
+FLEXI_UMOD_BASIC_PARAMETERS_DESC="NOTE: [# standard] = [# items] - [# featured] <br/> -- 'featured' items are the first NN items (set number below) <br/> -- 'featured' items may have different display 'standard' items, this depends on template, e.g. they can be full width"
+
 FLEXI_TEMPLATE_LAYOUT="Template Layout"
 
-FLEXI_ITEM_LIST_BASIC_OPTIONS="Item List: <small>Basic Options (# of items, ordering, empty field filter, etc)</small>"
-FLEXI_ITEM_LIST_BASIC_OPTIONS_DESC="Basic options of item list (that are supported by all template layouts), like: number of items, ordering, skipping unwanted items that have empty value on specific fields, etc"
+FLEXI_ITEM_LIST_BASIC_OPTIONS="Item List: Basic (order, skip, etc)"
+FLEXI_ITEM_LIST_BASIC_OPTIONS_DESC="Basic options of item list (that are supported by all template layouts), like: ordering, skipping unwanted items that have empty value on specific fields, etc"
 
-FLEXI_ITEM_LIST_FILTERING_SCOPES="Item List: <small>Filtering SCOPEs (<i>ALL enabled filters</i> are required)</small>"
-FLEXI_ITEM_LIST_FILTERING_SCOPES_DESC="NOTE: (a) STATIC behaviour will show SAME ITEMS REGARDLESS of current view/page, (b) DYNAMIC behaviour will show ITEMS THAT DEPEND on current view (e.g. CURRENTLY VIEWED ITEM) or other dynamic data (e.g. server time)"
+FLEXI_ITEM_LIST_SELECT_ITEMS="Item List: Select Items"
+FLEXI_ITEM_LIST_SELECT_ITEMS_DESC="--ALL-- enabled filtering SCOPEs are required. NOTE: (a) STATIC behaviour will show SAME ITEMS REGARDLESS of current view/page, (b) DYNAMIC behaviour will show ITEMS THAT DEPEND on current view (e.g. CURRENTLY VIEWED ITEM) or other dynamic data (e.g. server time)"
 
-FLEXI_ITEM_LIST_FIELD_SELECTION="Item List: <small>Displaying of Fields & Other item information -- (Used by <i>Some Layouts</i> e.g. news)</small>"
-FLEXI_ITEM_LIST_FIELD_SELECTION_DESC="Item fields and other information to display for every listed item. NOTE: This parameters are used only by some templates e.g. news, carousel template layouts"
+FLEXI_CATEGORY_LIST="Category List"
+FLEXI_CATEGORY_LIST_DESC="Here you can enable creation of a category list and configure the category information displayed. NOTE: The category list will show a list of category items just below the category information. NOTE: to create a category list with no items, set the number of displayed items to ZERO"
 
-FLEXI_CATEGORY_LISTS="Category List: <small>Current category / Selected categories display options</small>"
-FLEXI_CATEGORY_LISTS_DESC="Here you can enable creation of a category list and configure the category information displayed. NOTE: The category list will show a list of category items just below the category information. NOTE: to create a category list with no items, set the number of displayed items to ZERO"
-
-FLEXI_SPECIAL_LISTS_OR_INFO="Special Lists / Information: <small>e.g. Recent Favourites, Read More, etc</small>"
-FLEXI_SPECIAL_LISTS_OR_INFO_DESC="Normally this module creates item/category lists. Here you can select to display other types of information."
+FLEXI_SPECIAL_LISTS_AND_INFO="Special Lists / Information"
+FLEXI_SPECIAL_LISTS_AND_INFO_DESC="Normally this module creates item/category lists. Here you can select to display other types of information."
 
 FLEXI_UMOD_FEATURED_STANDARD_ITEMS="Featured / Standard items"
 FLEXI_MENU_ITEM="Menu item to activate"
@@ -535,6 +533,8 @@ FLEXI_MOD_CAROUSEL_LOADING_IMAGES="loading images"
 
 FLEXI_MOD_TMPL_LAYOUT_OPTIONS="Layout: <small>Options of selected Layout</small>"
 FLEXI_MOD_TMPL_LAYOUT_OPTIONS_DESC="Layout Options specific to the choosen template layout"
+FLEXI_MOD_TMPL_SELECT_FIELDS="Layout: Select fields"
+FLEXI_MOD_TMPL_SELECT_FIELDS_DESC="This is the item information (fields) displayed for -every- listed item. NOTE: This information is available to ALL templates, but not ALL templates will make use of it, e.g. 'news' and 'carousel' template layouts will make use of ALL these parameters, but template layouts 'default' and 'select' may/will not use them"
 
 FLEXI_CUSTOM_FIELD_SCOPE="Custom field scope"
 FLEXI_CUSTOM_FIELD_SCOPE_DESC="Use this SCOPE to filter items list by comparing to values of custom fields"
