+ Added masonry support to universal module templates (news, carousel), cleaning up CSS too, and adding unique ids/CSS classes to containers (JS updated too), for the case that multiple items listings (multiple ordering) are used

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -838,6 +838,7 @@ FLEXI_INTRO_COLS="Intro Columns"
 
 FLEXI_MAX_ITEM_COLS_RESPONSIVE="Max item columns (responsive)"
 FLEXI_ITEMS_PLACEMENT="Items placement"
+FLEXI_CLEARED="Cleared"
 FLEXI_AS_MASONRY_TILES="As masonry tiles"
 FLEXI_LEADING_NUM="# Leading"
 
