^ Changed title of TAB layout in category-like menu items

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -901,6 +901,7 @@ FLEXI_PARAMETERS_SUBCATS_INFO_OPTIONS="Parameters: <small>Sub-categories (1st su
 FLEXI_PARAMETERS_PEERCATS_INFO_OPTIONS="Parameters: <small>Peer-Categories (same-level)</small>"
 FLEXI_PARAMETERS_CAT_ITEMS_LIST="Parameters: <small>Items List Creation</small>"
 FLEXI_PARAMETERS_CAT_ITEM_FILTERING="Parameters: <small>Alpha-Index, Search, Filters</small>"
+FLEXI_PARAMETERS_CAT_LAYOUT="Parameters: <small>Layout Selection</small>"
 FLEXI_PARAMETERS_CAT_RSS_FEEDS="Parameters: <small>RSS Feeds List</small>"
 FLEXI_PARAMETERS_CAT_ITEM_MARKUPS="Parameters: <small>Content Markups</small>"
 FLEXI_PARAMETERS_CAT_SUBCATS_INFO_OPTIONS="Parameters: <small>Sub-categories (1st sub-level)</small>"
@@ -1809,7 +1810,7 @@ FLEXI_PARAMETERS_CAT_BASIC_OVERRIDE_CONF="Basic Parameters <small style='color:d
 FLEXI_PARAMETERS_CAT_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Category Info & Options</small>"
 FLEXI_PARAMETERS_CAT_ITEMS_LIST_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Items List Creation</small>"
 FLEXI_PARAMETERS_CAT_ITEM_FILTERING_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Alpha-Index, Search, Filters</small>"
-FLEXI_PARAMETERS_LAYOUT_THEMES_OVERRIDE="<b style='color:darkgreen;'>override:</b> Layout Selection <br/><small>NOTE: This list contains template names,<br/> since EVERY template contains ONE layout of every kind.<br/> So there is ONE item layout, ONE category layout, etc, etc</small>"
+FLEXI_PARAMETERS_CAT_LAYOUT_OVERRIDE="<b style='color:darkgreen;'>override:</b> Layout Selection"
 FLEXI_PARAMETERS_CAT_RSS_FEEDS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>RSS Feeds List</small>"
 FLEXI_PARAMETERS_CAT_ITEM_MARKUPS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Content Markups</small>"
 FLEXI_PARAMETERS_CAT_SUBCATS_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Sub-categories (1st sub-level)</small>"
@@ -2287,10 +2288,6 @@ FLEXI_ADD_ITEM_TOOLTIP_DESC="Enable this add a hovering tooltip with e.g. read m
 
 FLEXI_LIST_CREATION_ITEM_FORM="List Creation (Item Form)"
 FLEXI_LIST_CREATION_FRONTEND_VIEWS="List Creation (Frontend Views)"
-
-; Warnings for category menu item
-FLEXI_APPLIED_REGARDLESS_OF_OVERRIDE="<small>Applied regardess of override</small>"
-FLEXI_MENU_ITEM_SELECTABLE_VIA_DIRECT_CLICK_ONLY="<small>PLEASE NOTE: if you enable any of the following options then this menu item will only be activated by a direct click on it</small>"
 
 ; Add new content for content lists (e.g. category view)
 FLEXI_SHOW_ADD_TO_LIST_BUTTON="Add button<br/><small>to Category / to List</small>"
