+ Added option to force display of read more regardless of the presense of fulltext (main item text that is after readmore separator), also a fix for TABBER JS to try h3 before h2 for title of TABs

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -59,7 +59,7 @@ FLEXI_EDIT_CATEGORY="Edit category"
 FLEXI_EDIT_ITEM="Edit item"
 FLEXI_FINISH="Finish"
 FLEXI_FINISH_NO_EXPIRY="Finish : No expiry"
-FLEXI_FULLTEXT="Fulltext"
+FLEXI_FULLTEXT="Full (main) text"
 FLEXI_GO="Go"
 FLEXI_INDEX="Indexed"
 FLEXI_INDEXED_CONTENT="Indexed content"
@@ -1242,6 +1242,7 @@ FLEXI_ALWAYS_CREATE_FIELDS_DISPLAY_DESC="It is strongly recommended that you set
 FLEXI_ONLY_WHEN_NEEDED="Only When needed (Recommended)"
 FLEXI_ALWAYS_NOT_RECOMMENDED="Always (Not Recommended)"
 FLEXI_ALWAYS="Always"
+FLEXI_SHOW_ALWAYS="Show always"
 FLEXI_ONLY_IN_ITEM_VIEW="Only in item view"
 FLEXI_NEVER_UNLESS_IN_POSITION="Never unless in a template position"
 FLEXI_SEF_OPTIONS="SEF Options"
@@ -1852,8 +1853,8 @@ FLEXI_DEFAULT_MENU_ITEM_MISSING_DISABLED="Default menu item was not found or was
 FLEXI_DEFAULT_MENU_ITEM_ISNON_FLEXI="Default menu item is not pointing to FLEXIcontent component."
 FLEXI_DEFAULT_MENU_ITEM_ISNON_PUBLIC="Default menu item does not have public access level."
 
-FLEXI_FORCE_FULLTXT="Force Full Text"
-FLEXI_FORCE_FULLTXT_DESC="Full Text is used to present the content in full view, you can choose here whether to show it when the content is displayed in <b>category</b> and other multi-item listings, thus appending it after content's introductory text"
+FLEXI_FORCE_FULLTXT="Force Full (main) Text"
+FLEXI_FORCE_FULLTXT_DESC="Full (main) Text is used to present the content in full view and is the text after the 'readmore' separator, you can choose here whether to show it when the content is displayed in <b>category</b> and other multi-item listings, thus appending it after content's introductory text"
 
 ; Usability messages
 FLEXI_SHOW_USABILITY_MESSAGES="Show usability notices"
@@ -1919,7 +1920,7 @@ FLEXI_NF_EXTRA_PROPERTIES="Optional notification data"
 FLEXI_NF_EXTRA_PROPERTIES_DESC="Select option data to include in the notification main text"
 FLEXI_NF_ADD_INTROTEXT="Add introtext"
 FLEXI_NF_ADD_INTROTEXT_DESC="Select to add a part of the introtext to the notification"
-FLEXI_NF_ADD_FULLTEXT="Add fulltext"
+FLEXI_NF_ADD_FULLTEXT="Add full (main) text"
 FLEXI_NF_ADD_FULLTEXT_DESC="Select to add a part of the fulltext to the notification"
 FLEXI_NF_ENABLE_DEBUG="Debug notifications"
 FLEXI_NF_ENABLE_DEBUG_DESC="-- Enable this to:<br/>(a) display debuging information and also <br/>(b) <b>force sending notifications email on every save operation</b>, <br/><br/> -- Normally notifications will be sent ONLY <br/>(a) once per session for each content item or <br/>(b)<b>when its categories are changed</b>."
@@ -2060,7 +2061,7 @@ FLEXI_NF_EDIT_LINK_FE="Frontend Edit Link"
 FLEXI_NF_EDIT_LINK_BE="Backend Edit Link"
 FLEXI_NF_INTROTEXT="Intro text"
 FLEXI_NF_INTROTEXT_LONG="Introductory text (for category view)"
-FLEXI_NF_FULLTEXT="Full text"
+FLEXI_NF_FULLTEXT="Full (main) text"
 FLEXI_NF_FULLTEXT_LONG="Detailed Content Text (for content view)"
 FLEXI_NF_CATEGORIES_ASSIGNMENTS="Category assignments"
 FLEXI_NF_UNCHANGED="unchanged"
@@ -2990,3 +2991,7 @@ FLEXI_ID="ID"
 
 FLEXI_CUSTOM_MODULE_PER_ITEM="Customize module parameters per item (not for position mode)"
 FLEXI_CUSTOM_MODULE_PER_ITEM_DESC="You can - try - to customize some module parameters by allowing user to enter values for them in item form. <br/><br/> <b>NOTE</b> You need to examine XML file of target module to find parameter names  &lt;br/&gt;&lt;br/&gt; <b>Example</b>  <br/> param_label1!!param_name1 %% param_label2!!param_name2 %% param_label3!!param_name3 "
+
+; Field groups
+FLEXI_USE_IN_FIELD_GROUP="Use field in a group"
+FLEXI_USE_IN_FIELD_GROUP_DESC="Enable to allow field to be part of field group, that is created via 'Field Group' field. NOTE: You should then select this field in ONLY ONE field group"
