+ Enhanced category filtering SCOPE of universal module, to be able to display of items belonging to the active category(-ies) shown by category view

--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -176,8 +176,10 @@ FLEXI_PARENTS="Parent categories"
 FLEXI_RELATED_COMMON_TAGS="Related items (common tags)"
 FLEXI_RELATED_RELATION_FIELD="Related items (relation field)"
 FLEXI_REVERSE_RELATED_RELATION_FIELD="Reverse Related items (relation field)"
-FLEXI_SAME_CAT="Items in the same category"
-FLEXI_NOT_SAME_CAT="Items not in the same category"
+FLEXI_UMOD_ITEMS_SAME_CAT="Items in the same category"
+FLEXI_UMOD_ITEMS_NOT_SAME_CAT="Items not in the same category"
+FLEXI_UMOD_ITEMS_ACTIVE_CAT="Items in active category(-ies)"
+FLEXI_UMOD_ITEMS_NOT_ACTIVE_CAT="Items not in the active category(-ies)"
 FLEXI_SAME_AUTHOR="From the same author"
 FLEXI_NOT_SAME_AUTHOR="From another author"
 FLEXI_CURRENT_USER_MY_ITEMS="Current Logged User (=My Items)"
@@ -277,7 +279,7 @@ FLEXI_DISPLAY_CATS_DESC="When enabled, the selected categories will be displayed
 FLEXI_CATS="Categories"
 FLEXI_CATS_INFO="Categories Information Displayed"
 FLEXI_CURRCAT_CUSTOM_DISPLAY="Custom display for current category"
-FLEXI_CURRCAT_CUSTOM_DISPLAY_DESC="When enabled only the category of the currently viewed item will be displayed. Appearance can be customized by the following parameters"
+FLEXI_CURRCAT_CUSTOM_DISPLAY_DESC="When enabled then the category of the currently viewed item will be displayed <b>differently</b> than other categories. Appearance can be customized by the following parameters"
 FLEXI_FALLBACK_MAINCAT="Fallback to main category"
 FLEXI_FALLBACK_MAINCAT_DESC="If a current category id is not set in the URL, then the main category of the currently viewed item will be used"
 FLEXI_CURRCAT="Current Category (item view)"
@@ -382,6 +384,7 @@ FLEXI_BEHAVIOUR_STATIC_DYNAMIC_DATE_DESC="<br><u>Static behaviour</u>: compares 
 FLEXI_STATIC_DATE_BEHAVIOUR="Static behaviour: Specific dates ... or custom offset for dynamic behaviours"
 FLEXI_DYNAMIC_DATE_BEHAVIOUR="Dynamic behaviours: Compare to server time or to currently viewed item"
 
+FLEXI_DYNAMIC_CMP_TO_CURR_CAT="Dynamic Behaviour (Compare to currently viewed category(-ies))"
 FLEXI_DYNAMIC_CMP_TO_CURR_ITEM="Dynamic Behaviour (Compare to currently viewed item)"
 FLEXI_DYNAMIC_CMP_TO_CURR_SRV_TIME_OR_CURR_ITEM_DATES="Dynamic Behaviour ( ... )"
 FLEXI_DYNAMIC_SAME_TO_CURR_SRV_TIME_OR_CURR_ITEM_DATES="Dynamic Behaviour (Same ...)"
