# Minor changes in frontend template display of page counter and in header label for filtering in field XML files

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2384,8 +2384,8 @@ FLEXI_FIELD_ALTERNATIVE_DISPLAY="Alternative Display"
 FLEXI_FIELD_NUMBER_OF_VALUES="Number of values"
 
 ; enhancements of search/filtering
-FLEXI_TEXT_SEARCH_FILTER_CONF="Content Lists views / Search view Filter Configuration"
-FLEXI_TEXT_SEARCH_FILTER_CONF_DESC="Parameters used for search/filtering in (a) content lists views , (b) search view"
+FLEXI_FILTERING_CONF="Filtering"
+FLEXI_FILTERING_DESC="Parameters used for filtering in (a) content lists views , (b) search view"
 
 ; enhancements of search/filtering : Creation of filter values of date containing fields
 FLEXI_FILTER_DATE_GROUPING="Filter Grouping <br/><small>for non-text display types</small>"
@@ -2395,7 +2395,7 @@ FLEXI_MONTH="Month"
 FLEXI_DAY="Day"
 
 ; enhancements of search/filtering : Creation of filter values with Query or Elements
-FLEXI_FILTER_OPTIONS_CREATION_CONF="Filter Options Creation"
+FLEXI_FILTER_OPTIONS_CREATION_CONF="Filter values creation"
 FLEXI_FILTER_OPTIONS_CREATION_WARNING="<small>Take care to create proper SQL query or elements <br/>-- NOTE: 'value' part of elements/query must match existing field values</small>"
 FLEXI_CUSTOM_FILTER_VALUES="Custom Retrieval of Filter Values"
 FLEXI_CUSTOM_FILTER_VALUES_DESC="Select to use all text field values for filter, or define a custom sql query to use some of them and maybe modify display selection of the (text property in query)"
