# Ammeding last commit

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2385,7 +2385,7 @@ FLEXI_FIELD_NUMBER_OF_VALUES="Number of values"
 
 ; enhancements of search/filtering
 FLEXI_FILTERING_CONF="Filtering"
-FLEXI_FILTERING_DESC="Parameters used for filtering in (a) content lists views , (b) search view"
+FLEXI_FILTERING_CONF_DESC="Parameters used for filtering in (a) content lists views , (b) search view"
 
 ; enhancements of search/filtering : Creation of filter values of date containing fields
 FLEXI_FILTER_DATE_GROUPING="Filter Grouping <br/><small>for non-text display types</small>"
