+ Added Tabs placement option for frontend filters display

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2437,6 +2437,7 @@ FLEXI_FILTERS_PLACEMENT="Filters placement"
 FLEXI_ONE_RECORD_PER_ROW="One record per row"
 FLEXI_ONE_RECORD_PER_ROW_DESC="Select how the records will be placed: <br/>-- Display a single record per row, or <br/>-- Use a custom separator"
 FLEXI_NO_USE_SEPARATOR="No, use separator"
+FLEXI_PLACE_IN_TABS="Place in tabs"
 FLEXI_YES_BUT_FILTER_BELOW_LABEL="Yes, but filter below label"
 FLEXI_TYPE_SEARCH_LABEL="Show Label"
 FLEXI_TYPE_SEARCH_LABEL_DESC="You may want to hide label or display label inside the content types search"
