# Some CSS / JS validation improvements and cleanups for item from, TODO commit effected fields

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -889,17 +889,19 @@ FLEXI_SELECT_ONE_CATEGORY="Please select a category"
 FLEXI_SHOW_ALPHA_DESC="Show/Hide the alphabetical index"
 FLEXI_SHOW_ALPHA="Show alpha index"
 
+FLEXI_SHOW_EMPTY_CATS_DESC="Show/Hide categories that have no items. <br/><br/> NOTE: this works when item counting is enabled"
+FLEXI_SHOW_EMPTY_CATS="Empty categories <br/> <small>(needs item count enabled)</small>"
 FLEXI_SHOW_ITEMS_COUNT_DESC="Show/Hide the items count of each sub-category"
-FLEXI_SHOW_ITEMS_COUNT="Show items count"
+FLEXI_SHOW_ITEMS_COUNT="Item count"
 FLEXI_SHOW_SUBCATS_COUNT_DESC="Show/Hide the sub categories count of each sub-category"
-FLEXI_SHOW_SUBCATS_COUNT="Show sub category count"
+FLEXI_SHOW_SUBCATS_COUNT="Sub category count"
 FLEXI_SHOW_SUBCATS_DESC="Show/Hide the sub-categories"
 FLEXI_SHOW_SUBCATS="Sub-categories"
 
 FLEXI_SHOW_ITEMS_COUNT_PEER_DESC="Show/Hide the items count of each peer-category"
 FLEXI_SHOW_ITEMS_COUNT_PEER="Show items count"
 FLEXI_SHOW_SUBCATS_COUNT_PEER_DESC="Show/Hide the sub categories count of each peer-category"
-FLEXI_SHOW_SUBCATS_COUNT_PEER="Show sub category count"
+FLEXI_SHOW_SUBCATS_COUNT_PEER="Sub category count"
 FLEXI_SHOW_PEERCATS_DESC="Show/Hide the peer-categories"
 FLEXI_SHOW_PEERCATS="Peer-categories"
 
@@ -2267,10 +2269,10 @@ FLEXI_MANAGE_CONTENT_IMPORT="Manage (Content) Import"
 
 ; Extra parameters for peer/sub-category formating
 FLEXI_SHOW_SUBCATS_LABEL="Sub-categories list label *"
-FLEXI_SHOW_SUBCATS_LABEL_DESC="Display a label before the sub-categories list <br/><br/><b>NOTE:</b> If both sub-category images and descriptions are disable then the label and the list of records will be placed inside 'inline' containers"
+FLEXI_SHOW_SUBCATS_LABEL_DESC="Display a label before the sub-categories list <br/><br/><b>NOTE:</b> If both sub-category images and descriptions are disabled then the label and the list of records will be placed inside 'inline' containers"
 FLEXI_SUBCATEGORY_ENCLOSING="Record (sub-category) enclosings"
 FLEXI_SHOW_PEERCATS_LABEL="Peer-categories list label *"
-FLEXI_SHOW_PEERCATS_LABEL_DESC="Display a label before the peer-categories list <br/><br/><b>NOTE:</b> If both sub-category images and descriptions are disable then the label and the list of records will be placed inside 'inline' containers"
+FLEXI_SHOW_PEERCATS_LABEL_DESC="Display a label before the peer-categories list <br/><br/><b>NOTE:</b> If both sub-category images and descriptions are disabled then the label and the list of records will be placed inside 'inline' containers"
 FLEXI_PEERCATEGORY_ENCLOSING="Record (peer-category) enclosings"
 
 ; new strings for record enclosing texts
