^ Completed new improved item form UI flexicontent fields including revising HTML, CSS, JS for fields in item form, moved field parameters to have a common placement, updating almost all fields, also enhanced the intenational phonenumbers field, made fields: select, radio, radioimage to be multi-valued, and completed work on them and other fields for supporting field grouping in --item form--, for frontend --field group display-- this needs to be verified for all fields

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -697,6 +697,16 @@ FLEXI_MAINTEXT_LABEL_DESC="The main text field label in the item form. Default i
 FLEXI_MAINTEXT_LABEL="Description label"
 
 ; Integrated plugins parameters
+FLEXI_FIELD_ADD_POSITION="Add position"
+FLEXI_FIELD_ADD_POSITION_DESC="Select to add value inline (show add button at every value) or append them to the bottom of the value list"
+FLEXI_FIELD_APPEND_BTN="Append to bottom"
+FLEXI_FIELD_INLINE_APPEND_BTN="Inline append"
+FLEXI_FIELD_INLINE_PREPEND_BTN="Inline prepend"
+FLEXI_FIELD_INLINE_BOTH_BTN="Inline both"
+
+FLEXI_ADD_BEFORE="Add before"
+FLEXI_ADD_AFTER="Add after"
+FLEXI_ADD_TO_BOTTOM="Add to bottom"
 FLEXI_ADD_VALUE="Add value"
 FLEXI_CLICK_TO_DRAG="Click, hold and drag to reorder"
 FLEXI_COMMA="Comma"
@@ -2570,6 +2580,8 @@ FLEXI_VALUE_VALIDATION_MASK_CUSTOM_DESC="(Developers only) Please enter a custom
 FLEXI_NO_MASK="No Masking"
 FLEXI_CUSTOM_MASK_ENTER_BELOW="-CUSTOM- Mask (enter below)"
 
+FLEXI_USE_JS_FORM_FIELD="Apply JS library"
+FLEXI_USE_JS_FORM_FIELD_DESC="Enable javascript handling/styling on the form field, to allow better appearance e.g. prettyCheckable for checkboxes and more user friendly behaviour e.g. select2 JS for drop-down selects"
 FLEXI_FORM_FIELD_CONF="Form field"
 FLEXI_FORM_FIELD_CONF_DESC="Configuration of the form field such us maximum characters"
 
@@ -2964,6 +2976,8 @@ FLEXI_HTML="HTML"
 FLEXI_TITLE="Title"
 FLEXI_IMAGE="Image"
 FLEXI_BUTTON="Button"
+FLEXI_HORIZONTAL="Horizontal"
+FLEXI_VERTICAL="Vertical"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
