--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -19,7 +19,7 @@ FLEXI_CATEGORIES="Categories"
 FLEXI_DASHBOARD="Dashboard"
 FLEXI_FIELDS="Fields"
 FLEXI_FILEMANAGER="Files"
-FLEXI_HOME="Home"
+FLEXI_HOME="Dashboard"
 FLEXI_ITEMS="Items"
 FLEXI_STATISTICS="Statistics"
 FLEXI_TAGS="Tags"
