--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -135,6 +135,7 @@ FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet 
 FLEXI_BIND_FAILED="All/some items were not successfully bound."
 FLEXI_BIND_SUCCESSFUL="These items were successfully bound to their extended data."
 FLEXI_ITEMS_TO_BIND="items to bind"
+FLEXI_FIX="Fix"
 FLEXI_IMPORT_JOOMLA="Import Joomla! structure"
 FLEXI_IMPORT_WARNING="<span class='alert-modalbox-title'>TAKE CARE!!!</span>You are about to import all your Joomla!'s com_content data. This import will create a new section named 'FLEXIsection' and duplicate all existing sections - categories - articles to reorganize them as categories - subcategories - items.<br />Don't forget to unpublish or trash the existing com_content data to avoid <strong>duplicate results</strong> in the search engine.<br />Do not execute this import twice to avoid <strong>duplicate contents</strong>!!!"
 FLEXI_IMPORT_FAILED="<strong>The following contents were not successfully imported:</strong>"
